@@ -56,7 +56,8 @@
         "ERROR": "¡Error!",
         "RESULT_FROM_QUERY": "Resultado de consulta",
         "ERROR_TRACE": "TRAZA DE ERROR",
-        "FORMAT RESULTS": "Formatear resultados"
+        "FORMAT RESULTS": "Formatear resultados",
+        "UNSAFE_INTEGER": "This number exceeds the JavaScript max safe integer. To be sure to have the right number cast it in your SQL query to string using 'field::string'."
     },
     "TABLE": {
         "TITLE": "Tablas",
