@@ -277,3 +277,10 @@ tr > .cr-table-cell {
     transform: rotate(359deg);
   }
 }
+
+.unsafe-number {
+  margin-left: 10px;
+  margin-right: 10px;
+  color: @red;
+  cursor: pointer;
+}
