@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Added: display warning in the console view when the query result contains 
+   an unsafe integer.
+
  - Relocated the help resources section to be underneath the tweet import tutorial.
 
  - Fix: Show loading indicator when `Execute Query ` is in progress.
